Fixed donate menu button spacing on mobile

--- a/themes/shrub/static/css/base-style.css
+++ b/themes/shrub/static/css/base-style.css
@@ -189,6 +189,8 @@ body {
   border-radius: 3px;
   text-decoration: none;
   padding-bottom: 0.15rem;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 #front-page-header {
